<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dialog_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LIST_NAME"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <CheckBox
        android:id="@+id/dialog_shop_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/INCLUDE_CLIPBOARD"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

</LinearLayout>