<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/add_list"
        android:title="@string/NEW_LIST"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/undo_delete_shop"
        android:title="@string/UNDO_DELETE_SHOP"
        android:orderInCategory="20"
        app:showAsAction="never" />

    <!--
    <item android:id="@+id/load_list"
        android:title="@string/LOAD_DIALOG"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item android:id="@+id/save_list"
        android:title="@string/SAVE_DIALOG"
        android:orderInCategory="50"
        app:showAsAction="never" />
    -->

</menu>
